--- a/src/app/ajanlat/ajanlat/ajanlat.html
+++ b/src/app/ajanlat/ajanlat/ajanlat.html
@@ -3,7 +3,7 @@
 
     <div class="editform-row">
         <div class="editform-label">Érvényes</div>
-        <input type="date" class="editform-date em10width" id="ervenyes"
+        <input type="date" class="editform-date" id="ervenyes"
                [(ngModel)]="AjanlatErvenyes" name="ervenyes">
     </div>
 
