--- a/src/app/bizonylat/bizonylat-penztar/bizonylat-penztar.component.html
+++ b/src/app/bizonylat/bizonylat-penztar/bizonylat-penztar.component.html
@@ -35,7 +35,7 @@
 
       <div class="editform-row">
           <div class="editform-label">Pénznem</div>
-          <input type="text" class="editform-edit em4width" id="penznem"
+          <input type="text" class="editform-edit penznemwidth" id="penznem"
                  disabled="true"
                  [(ngModel)]="penztarDto[penztarindex].Penznem" name="penznem">
       </div>
