--- a/src/app/bizonylat/bizonylat-zoom/bizonylat-zoom.component.html
+++ b/src/app/bizonylat/bizonylat-zoom/bizonylat-zoom.component.html
@@ -53,7 +53,7 @@
           </td>
 
           <td>
-            <div style="width: 250px">{{item.Ugyfelnev}}</div>
+            <div class="ugyfelwidth">{{item.Ugyfelnev}}</div>
             <div style="width: 250px">{{item.Ugyfelcim}}</div>
           </td>
 
