--- a/src/app/bizonylat/bizonylattabla/bizonylattabla.component.html
+++ b/src/app/bizonylat/bizonylattabla/bizonylattabla.component.html
@@ -58,7 +58,7 @@
         </td>
 
         <td>
-          <div style="width: 20em">{{item.Ugyfelnev}}</div>
+          <div class="ugyfelwidth">{{item.Ugyfelnev}}</div>
           <div style="width: 20em">{{item.Ugyfelcim}}</div>
         </td>
 
