--- a/src/app/ngm/ngm.component.html
+++ b/src/app/ngm/ngm.component.html
@@ -6,13 +6,13 @@
     <div class="editform-card">
       <div class="editform-row">
         <div class="editform-label">A számlák kelte</div>
-        <input type="date" class="editform-date em10width" id="szktol"
+        <input type="date" class="editform-date" id="szktol"
                [(ngModel)]="szktol" name="szktol">
       </div>
 
       <div class="editform-row">
         <div class="editform-row-block">
-          <input type="date" class="editform-date em10width" id="szkig"
+          <input type="date" class="editform-date" id="szkig"
                  [(ngModel)]="szkig" name="szkig">
           <button class="toolbutton" (click)="szamlakelte()" type="button" style="margin-left: 1em">
             <i class="fa fa-angle-right" aria-hidden="true"></i>
