--- a/src/app/penztar/penztar-szerkesztes/penztar-szerkesztes.component.html
+++ b/src/app/penztar/penztar-szerkesztes/penztar-szerkesztes.component.html
@@ -13,7 +13,7 @@
 
     <div class="editform-row">
       <div class="editform-label">Pénznem</div>
-      <input type="text" class="editform-edit em4width" id="penznem"
+      <input type="text" class="editform-edit zoomedit penznemwidth" id="penznem"
              maxlength="100" required autocomplete="off"
              [(ngModel)]="DtoEdited.Penznem" name="penznem">
       <button class="toolbutton" type="button" (click)="PenznemZoom()">...</button>
