--- a/src/app/projekt/projekt-datumok/projekt-datumok.component.html
+++ b/src/app/projekt/projekt-datumok/projekt-datumok.component.html
@@ -6,19 +6,19 @@
 
     <div class="editform-row">
         <div class="editform-label">Keletkezett</div>
-        <input type="date" class="editform-date em10width" id="keletkezett"
+        <input type="date" class="editform-date" id="keletkezett"
                [(ngModel)]="Keletkezett" name="keletkezett">
     </div>
 
     <div class="editform-row">
         <div class="editform-label">Megrendelve</div>
-        <input type="date" class="editform-date em10width" id="megrendelve"
+        <input type="date" class="editform-date" id="megrendelve"
                [(ngModel)]="Megrendelve" name="megrendelve">
     </div>
 
     <div class="editform-row">
         <div class="editform-label">Kivitelezési határidő</div>
-        <input type="date" class="editform-date em10width" id="kivhat"
+        <input type="date" class="editform-date" id="kivhat"
                [(ngModel)]="KivHat" name="kivhat">
     </div>
 
