--- a/src/app/projekt/projekttabla/projekt-tabla.component.html
+++ b/src/app/projekt/projekttabla/projekt-tabla.component.html
@@ -36,7 +36,7 @@
         <td *ngIf="!enIdclick">{{item.Projektkod}}</td>
         <td>{{item.Statusz}}</td>
         <td>
-          <div style="width: 20em">{{item.Ugyfelnev}}</div>
+          <div class="ugyfelwidth">{{item.Ugyfelnev}}</div>
           <div style="width: 20em">{{item.Ugyfelcim}}</div>
         </td>
         <td>
