--- a/src/app/riport/bejovoszamla/bejovoszamla.component.html
+++ b/src/app/riport/bejovoszamla/bejovoszamla.component.html
@@ -5,12 +5,12 @@
 
     <div class="editform-row">
         <div class="editform-label">A teljesítés kelte</div>
-        <input type="date" class="editform-date em10width" id="tol"
+        <input type="date" class="editform-date" id="tol"
                [(ngModel)]="tol" name="tol">
     </div>
 
     <div class="editform-row">
-        <input type="date" class="editform-date em10width" id="ig"
+        <input type="date" class="editform-date" id="ig"
                [(ngModel)]="ig" name="ig">
     </div>
 
