--- a/src/app/riport/koveteles/koveteles.component.html
+++ b/src/app/riport/koveteles/koveteles.component.html
@@ -5,7 +5,7 @@
 
     <div class="editform-row">
         <div class="editform-label">Dátum</div>
-        <input type="date" class="editform-date em10width" id="datum"
+        <input type="date" class="editform-date" id="datum"
                [(ngModel)]="datum" name="datum">
     </div>
 
