--- a/src/app/szamlazasirend/szamlazasirend-szerkesztes/szamlazasirend-szerkesztes.component.html
+++ b/src/app/szamlazasirend/szamlazasirend-szerkesztes/szamlazasirend-szerkesztes.component.html
@@ -13,8 +13,8 @@
 
     <div class="editform-row">
         <div class="editform-label">Pénznem</div>
-        <input type="text" class="editform-edit em4width" id="penznem"
-               maxlength="3" required autocomplete="off" style="background-color: aquamarine;"
+        <input type="text" class="editform-edit zoomedit penznemwidth" id="penznem"
+               maxlength="3" required autocomplete="off"
                [(ngModel)]="DtoEdited.Penznem" name="penznem">
         <button class="toolbutton" type="button" (click)="PenznemZoom()">...</button>
     </div>
