--- a/src/app/tools/toolbar/toolbarfooter/toolbarfooter.component.html
+++ b/src/app/tools/toolbar/toolbarfooter/toolbarfooter.component.html
@@ -1,4 +1,6 @@
-<button [disabled]="!enKereses" (click)="doKereses()" class="toolbutton" type="button">
-  <i class="fa fa-search" aria-hidden="true"></i>
-  {{rekordszam}} / {{osszesrekord}}
-</button>
+<div style="padding-top: 0.5em">
+  <button [disabled]="!enKereses" (click)="doKereses()" class="toolbutton" type="button">
+    <i class="fa fa-search" aria-hidden="true"></i>
+    {{rekordszam}} / {{osszesrekord}}
+  </button>
+</div>
