--- a/src/app/ugyfelter/ugyfelter-projekt-tabla/ugyfelter-projekt-tabla.component.html
+++ b/src/app/ugyfelter/ugyfelter-projekt-tabla/ugyfelter-projekt-tabla.component.html
@@ -30,7 +30,7 @@
       <td *ngIf="!enIdclick">{{item.Projektkod}}</td>
       <td>{{item.Statusz}}</td>
       <td>
-        <div style="width: 200px">{{item.Ugyfelnev}}</div>
+        <div class="ugyfelwidth">{{item.Ugyfelnev}}</div>
         <div style="width: 250px">{{item.Ugyfelcim}}</div>
       </td>
       <td>
