--- a/src/app/ajanlat/ajanlat-tetel/ajanlat-tetel.html
+++ b/src/app/ajanlat/ajanlat-tetel/ajanlat-tetel.html
@@ -1,8 +1,8 @@
 <div class="alapkeret">
   <div class="editform-row">
       <div class="editform-label">{{item.TetelTipus}}</div>
-      <input type="text" class="editform-edit em20width" id="cikk"
-             maxlength="100" autocomplete="off" style="background-color: aquamarine;display: inline-block"
+      <input type="text" class="editform-edit zoomedit em20width" id="cikk"
+             maxlength="100" autocomplete="off"
              [(ngModel)]="item.CikkNev" name="cikk">
       <button class="toolbutton" style="display: inline-block" type="button" (click)="CikkZoom()">...</button>
   </div>
