--- a/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
@@ -5,8 +5,8 @@
   <div class="editform-card">
     <div class="editform-row">
       <div class="editform-label">Ügyfél</div>
-      <input type="text" class="editform-edit em30width" id="ugyfelnev"
-             maxlength="200" required autocomplete="off" style="background-color: aquamarine"
+      <input type="text" class="editform-edit zoomedit ugyfelwidth" id="ugyfelnev"
+             maxlength="200" required autocomplete="off"
              [(ngModel)]="ComplexDtoEdited.Dto.Ugyfelnev">
       <button class="toolbutton" (click)="UgyfelZoom()" [disabled] = "SzerkesztesMode !== 1" type="button">...</button>
     </div>
@@ -53,8 +53,8 @@
     <div class="editform-row">
       <div class="editform-row-block">
         <div class="editform-label">Pénznem</div>
-        <input type="text" class="editform-edit em6width" id="penznem1"
-               maxlength="3" required autocomplete="off" style="background-color: aquamarine"
+        <input type="text" class="editform-edit zoomedit penznemwidth" id="penznem1"
+               maxlength="3" required autocomplete="off"
                [(ngModel)]="ComplexDtoEdited.Dto.Penznem">
         <button class="toolbutton" (click)="PenznemZoom()" [disabled] = "SzerkesztesMode !== 1" type="button">...</button>
       </div>
@@ -68,8 +68,8 @@
 
     <div class="editform-row">
       <div class="editform-label">Fizetési mód</div>
-      <input type="text" class="editform-edit em10width" id="fizetesimod"
-             maxlength="20" required autocomplete="off" style="background-color: aquamarine"
+      <input type="text" class="editform-edit zoomedit em10width" id="fizetesimod"
+             maxlength="20" required autocomplete="off"
              [(ngModel)]="ComplexDtoEdited.Dto.Fizetesimod">
       <button class="toolbutton" (click)="FizetesimodZoom()" [disabled] = "SzerkesztesMode !== 1" type="button">...</button>
       <button class="toolbutton" (click)="Bk()" type="button">Bk</button>
@@ -79,19 +79,19 @@
     <div class="editform-row">
       <div class="editform-row-block">
         <div class="editform-label">A bizonylat kelte</div>
-        <input type="date" class="editform-date em10width" id="bizonylatkelte"
+        <input type="date" class="editform-date" id="bizonylatkelte"
                [(ngModel)]="BizonylatKelte">
       </div>
 
       <div class="editform-row-block">
         <div class="editform-label">A teljesités kelte</div>
-        <input type="date" class="editform-date em10width" id="teljesiteskelte"
+        <input type="date" class="editform-date" id="teljesiteskelte"
                [(ngModel)]="TeljesitesKelte">
       </div>
 
       <div class="editform-row-block">
         <div class="editform-label">Fizetési határidő</div>
-        <input type="date" class="editform-date em10width" id="fizetesihatarido"
+        <input type="date" class="editform-date" id="fizetesihatarido"
                [(ngModel)]="FizetesiHatarido">
       </div>
     </div>
@@ -134,9 +134,11 @@
 
   <div class="editform-okcancel">
     <div class="alapkeret">
-      <button (click)="onTetelUjElott()" class="toolbutton">
-        <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>
-      </button>
+      <div class="toolbar">
+        <button (click)="onTetelUjElott()" class="toolbutton">
+          <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>
+        </button>
+      </div>
       <app-bizonylatteteltabla #teteltabla
                                [enEdit]="true"
                                [Dto]="ComplexDtoEdited.LstTetelDto"
