--- a/src/app/fotozas/fotozas-link/fotozas-link.component.html
+++ b/src/app/fotozas/fotozas-link/fotozas-link.component.html
@@ -1,7 +1,7 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Fotózás link</h5>
 
-  <div class="editform-row">
+  <div class="toolbar">
     <button (click)="doUj()" class="toolbutton">
       Új fotózás link
     </button>
@@ -11,10 +11,10 @@
   </div>
 
   <ng-container *ngIf="link !== ''">
-    <div class="editform-row">
-      <textarea class="em60width" rows="3" id="regilink" readonly="true" [(ngModel)]="link"></textarea>
+    <div>
+      <textarea rows="3" cols="100" id="regilink" disabled="true" [(ngModel)]="link"></textarea>
     </div>
-    <div class="editform-row">
+    <div>
       {{kikuldesikodidopontja}}
     </div>
   </ng-container>
@@ -22,11 +22,9 @@
 
   <ng-container *ngIf="egymode === 3">
     <div [@rowanimation]>
-      <div class="alapkeret editform-row">
+      <div class="alapkeret">
         <h5>Új fotózás link</h5>
-        <div class="editform-row">
-          Ha új fotózás linket készít, a régi érvényessége megszűnik. Biztos benne?
-        </div>
+        <div class="editform-row">Ha új fotózás linket készít, a régi érvényessége megszűnik. Biztos benne?</div>
         <div class="editform-okcancel" style="margin-bottom: 10px">
           <button class="toolbutton okbutton" (click)="onUj()">Ok</button>
           <button class="toolbutton" (click)="onMegsem()">Mégsem</button>
@@ -37,11 +35,9 @@
 
   <ng-container *ngIf="egymode === 2">
     <div [@rowanimation]>
-      <div class="editform-row">
         <app-tetel-torles [cim]="'Fotózás link'"
                           (eventTorles)="onTorles($event)">
         </app-tetel-torles>
-      </div>
     </div>
   </ng-container>
 </div>
