--- a/src/app/irat/irat-szerkesztes/irat-szerkesztes.component.html
+++ b/src/app/irat/irat-szerkesztes/irat-szerkesztes.component.html
@@ -7,7 +7,7 @@
     <div class="editform-card">
       <div class="editform-row">
         <div class="editform-label">Irány</div>
-        <select type="text" class="editform-combo em4width"
+        <select type="text" class="editform-combo"
                 [(ngModel)]="DtoEdited.Irany" name="irany">
           <option>Be</option>
           <option>Ki</option>
@@ -17,14 +17,14 @@
 
       <div class="editform-row">
         <div class="editform-label">Keletkezett</div>
-        <input type="date" class="editform-date em10width" id="keletkezett"
+        <input type="date" class="editform-date" id="keletkezett"
                [(ngModel)]="Keletkezett" name="keletkezett">
       </div>
 
       <div class="editform-row">
         <div class="editform-label">Irattipus</div>
-        <input type="text" class="editform-edit em10width" id="irattipus"
-               maxlength="30" required autocomplete="off" style="background-color: aquamarine; display: inline-block"
+        <input type="text" class="editform-edit zoomedit em10width" id="irattipus"
+               maxlength="30" required autocomplete="off"
                [(ngModel)]="DtoEdited.Irattipus" name="irattipus">
         <button class="toolbutton" type="button" (click)="IrattipusZoom()">...</button>
       </div>
@@ -34,8 +34,8 @@
       <ng-container *ngIf="enUgyfel">
         <div class="editform-row">
             <div class="editform-label">Ügyfél</div>
-            <input type="text" class="editform-edit em15width" id="ugyfelnev"
-                   maxlength="200" autocomplete="off" style="background-color: aquamarine; display: inline-block"
+            <input type="text" class="editform-edit zoomedit ugyfelwidth" id="ugyfelnev"
+                   maxlength="200" autocomplete="off"
                    [(ngModel)]="DtoEdited.Ugyfelnev" name="ugyfelnev">
             <button class="toolbutton" type="button" (click)="UgyfelZoom()">...</button>
             <button class="toolbutton" (click)="UgyfelTorles()" type="button">
