--- a/src/app/penztar/penztar-export/penztar-export.component.html
+++ b/src/app/penztar/penztar-export/penztar-export.component.html
@@ -5,13 +5,13 @@
 
     <div class="editform-row">
         <div class="editform-label">Dátumtól</div>
-        <input type="date" class="editform-date em10width" id="tol"
+        <input type="date" class="editform-date" id="tol"
                [(ngModel)]="tol" name="tol">
     </div>
 
     <div class="editform-row">
         <div class="editform-label">Dátumig</div>
-        <input type="date" class="editform-date em10width" id="ig"
+        <input type="date" class="editform-date" id="ig"
                [(ngModel)]="ig" name="ig">
     </div>
 
