--- a/src/app/primitiv/penznem/penznem-szerkesztes/penznem-szerkesztes.component.html
+++ b/src/app/primitiv/penznem/penznem-szerkesztes/penznem-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-row">
       <div class="editform-label">Pénznem</div>
-      <input type="text" class="editform-edit em4width" id="penznem1"
+      <input type="text" class="editform-edit penznemwidth" id="penznem1"
              maxlength="3" required autocomplete="off"
              [(ngModel)]="DtoEdited.Penznem1" name="penznem1">
     </div>
