--- a/src/app/riport/tartozas/tartozas.component.html
+++ b/src/app/riport/tartozas/tartozas.component.html
@@ -6,7 +6,7 @@
     <div class="editform-row">
       <div>
         <div class="editform-label">Dátum</div>
-        <input type="date" class="editform-date em10width" id="datum"
+        <input type="date" class="editform-date" id="datum"
                [(ngModel)]="datum" name="datum">
       </div>
     </div>
