--- a/src/app/bizonylat/bizonylat-errol/bizonylat-errol.component.html
+++ b/src/app/bizonylat/bizonylat-errol/bizonylat-errol.component.html
@@ -10,7 +10,7 @@
         </select>
       </div>
 
-      <div class="editform-okcancel">
+      <div class="editform-row-bottom">
         <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
         <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
       </div>
@@ -20,7 +20,7 @@
       <div class="editform-row">
         Az új bizonylat elkészült, bizonylatkód: {{ujbizonylatkod}}
       </div>
-      <div class="editform-okcancel">
+      <div class="editform-row-bottom">
         <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
       </div>
     </ng-container>
