--- a/src/app/bizonylat/bizonylat-penztar/bizonylat-penztar.component.html
+++ b/src/app/bizonylat/bizonylat-penztar/bizonylat-penztar.component.html
@@ -61,7 +61,7 @@
                  [(ngModel)]="megjegyzes" name="megjegyzes">
       </div>
 
-      <div class="editform-okcancel">
+      <div class="editform-row-bottom">
         <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
         <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
       </div>
