--- a/src/app/bizonylat/bizonylat-storno/bizonylat-storno.component.html
+++ b/src/app/bizonylat/bizonylat-storno/bizonylat-storno.component.html
@@ -3,7 +3,7 @@
   <div class="editform-row">
     Biztosan stornozni akarja ezt a tételt?
   </div>
-  <div class="editform-okcancel">
+  <div class="editform-row-bottom">
     <button class="toolbutton okbutton" type="button" (click)="ok()">Ok</button>
     <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
   </div>
