--- a/src/app/bizonylatkapcsolat/bizonylatkapcsolat-vagolaprol/bizonylatkapcsolat-vagolaprol.component.html
+++ b/src/app/bizonylatkapcsolat/bizonylatkapcsolat-vagolaprol/bizonylatkapcsolat-vagolaprol.component.html
@@ -3,7 +3,7 @@
   <div class="editform-row">
     <app-vagolap></app-vagolap>
   </div>
-  <div class="editform-okcancel" style="margin-bottom: 10px">
+  <div class="editform-row-bottom" style="margin-bottom: 10px">
     <button class="toolbutton okbutton" type="button" (click)="ok()">Ok</button>
     <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
   </div>
