--- a/src/app/fotozas/fotozas-link/fotozas-link.component.html
+++ b/src/app/fotozas/fotozas-link/fotozas-link.component.html
@@ -25,7 +25,7 @@
       <div class="alapkeret">
         <h5>Új fotózás link</h5>
         <div class="editform-row">Ha új fotózás linket készít, a régi érvényessége megszűnik. Biztos benne?</div>
-        <div class="editform-okcancel" style="margin-bottom: 10px">
+        <div class="editform-row-bottom" style="margin-bottom: 10px">
           <button class="toolbutton okbutton" (click)="onUj()">Ok</button>
           <button class="toolbutton" (click)="onMegsem()">Mégsem</button>
         </div>
