--- a/src/app/fotozas/fotozas/fotozas.component.html
+++ b/src/app/fotozas/fotozas/fotozas.component.html
@@ -67,7 +67,7 @@
         </div>
       </div>
 
-      <div class="editform-okcancel">
+      <div class="editform-row-bottom">
         <button class="toolbutton okbutton" [disabled]="!f.valid || file === undefined" type="submit">Ok</button>
       </div>
     </form>
