--- a/src/app/logon/bejelentkezes/bejelentkezes.component.html
+++ b/src/app/logon/bejelentkezes/bejelentkezes.component.html
@@ -19,7 +19,7 @@
       </div>
     </div>
 
-    <div class="editform-okcancel">
+    <div class="editform-row-bottom">
       <button class="toolbutton okbutton" type="submit" [disabled]="!form.valid">Ok</button>
     </div>
   </form>
