--- a/src/app/ngm/ngm.component.html
+++ b/src/app/ngm/ngm.component.html
@@ -40,5 +40,5 @@
     </div>
 
   </form>
-  <div class="editform-okcancel">{{result}}</div>
+  <div class="editform-row-bottom">{{result}}</div>
 </div>
