--- a/src/app/penztar/penztar-export/penztar-export.component.html
+++ b/src/app/penztar/penztar-export/penztar-export.component.html
@@ -15,7 +15,7 @@
                [(ngModel)]="ig" name="ig">
     </div>
 
-    <div class="editform-okcancel">
+    <div class="editform-row-bottom">
       <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
       <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
