--- a/src/app/szamlazasirend/szamlazasirend-szerkesztes/szamlazasirend-szerkesztes.component.html
+++ b/src/app/szamlazasirend/szamlazasirend-szerkesztes/szamlazasirend-szerkesztes.component.html
@@ -26,7 +26,7 @@
                [(ngModel)]="DtoEdited.Megjegyzes" name="megjegyzes">
     </div>
 
-    <div class="editform-okcancel">
+    <div class="editform-row-bottom">
       <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
       <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
