--- a/src/app/tools/errorbox/errorbox.component.html
+++ b/src/app/tools/errorbox/errorbox.component.html
@@ -12,7 +12,7 @@
       </ng-container>
     </div>
 
-    <div class="editform-okcancel">
+    <div class="editform-row-bottom">
       <button type="button" class="toolbutton" data-dismiss="modal" (click)="onClose()">Ok</button>
     </div>
   </div>
