--- a/src/app/ugyfel/ugyfel-csoport/ugyfel-csoport.component.html
+++ b/src/app/ugyfel/ugyfel-csoport/ugyfel-csoport.component.html
@@ -16,7 +16,7 @@
       </div>
     </div>
 
-    <div class="editform-okcancel">
+    <div class="editform-row-bottom">
       <button class="toolbutton okbutton" [disabled]="!f.valid" type="button" (click)="okClick()">Ok</button>
       <button class="toolbutton" [disabled]="!f.valid" type="button" (click)="cancelClick()">Mégsem</button>
     </div>
