--- a/src/app/ugyfelter/ugyfel-ter-link/ugyfel-ter-link.component.html
+++ b/src/app/ugyfelter/ugyfel-ter-link/ugyfel-ter-link.component.html
@@ -23,7 +23,7 @@
     <div [@rowanimation]>
       <h5>Új ügyféltér link</h5>
       <div class="editform-row">Ha új ügyféltér linket készít, a régi érvényessége megszűnik. Biztos benne?</div>
-      <div class="editform-okcancel">
+      <div class="editform-row-bottom">
         <button class="toolbutton okbutton" (click)="onUj()">Ok</button>
         <button class="toolbutton" (click)="onMegsem()">Mégsem</button>
       </div>
