--- a/src/app/bizonylat/bizonylat-kibocsatas/bizonylat-kibocsatas.component.html
+++ b/src/app/bizonylat/bizonylat-kibocsatas/bizonylat-kibocsatas.component.html
@@ -20,7 +20,7 @@
       </div>
     </ng-container>
 
-    <div class="editform-okcancel">
+    <div class="editform-row-bottom">
       <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
       <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
     </div>
