--- a/src/app/dokumentum/dokumentum-feltoltes/dokumentum-feltoltes.component.html
+++ b/src/app/dokumentum/dokumentum-feltoltes/dokumentum-feltoltes.component.html
@@ -15,7 +15,7 @@
         <div style="color: red">Ha ez a mező üresen marad, automatikusan<br> az eredeti fájlnév kerül a megjegyzésbe.</div>
     </div>
 
-    <div class="editform-okcancel">
+    <div class="editform-row-bottom">
       <button class="toolbutton okbutton" [disabled]="file === undefined" type="submit">Ok</button>
       <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
