--- a/src/app/penztar/penztar-szerkesztes/penztar-szerkesztes.component.html
+++ b/src/app/penztar/penztar-szerkesztes/penztar-szerkesztes.component.html
@@ -19,7 +19,7 @@
       <button class="toolbutton" type="button" (click)="PenznemZoom()">...</button>
     </div>
 
-    <div class="editform-okcancel">
+    <div class="editform-row-bottom">
       <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
       <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
