--- a/src/app/primitiv/afakulcs/afakulcs-szerkesztes/afakulcs-szerkesztes.component.html
+++ b/src/app/primitiv/afakulcs/afakulcs-szerkesztes/afakulcs-szerkesztes.component.html
@@ -17,7 +17,7 @@
              [(ngModel)]="DtoEdited.Afamerteke" name="egysegar">
     </div>
 
-    <div class="editform-okcancel">
+    <div class="editform-row-bottom">
       <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
       <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
