--- a/src/app/projekt/projekt-muszakiallapot/projekt-muszakiallapot.component.html
+++ b/src/app/projekt/projekt-muszakiallapot/projekt-muszakiallapot.component.html
@@ -3,13 +3,64 @@
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
-    <div class="editform-row">
-      <select type="text" class="editform-combo" name="statusz" [(ngModel)]="DtoEdited.Muszakiallapot">
-        <option *ngFor="let s of entries" [value]="s">{{s}}</option>
-      </select>
+    <div class="editform-card" style="margin-right: 3em">
+      <div class="editform-row">
+        <div class="editform-label">Műszaki állapot</div>
+        <select type="text" class="editform-combo" name="muszakiallapot" [(ngModel)]="DtoEdited.Muszakiallapot">
+          <option *ngFor="let s of projektservice.muszakiallapotok" [value]="s">{{s}}</option>
+        </select>
+      </div>
     </div>
 
-    <div class="editform-okcancel">
+    <div class="editform-card" style="margin-right: 3em">
+      <div class="editform-row">
+        <div class="editform-label">Inverter</div>
+        <input type="text" class="editform-edit em15width" id="inverter"
+               maxlength="50" autocomplete="off"
+               [(ngModel)]="DtoEdited.Inverter"
+               name="inverter">
+      </div>
+
+      <div class="editform-row">
+        <div class="editform-label">AC, kVA</div>
+        <input type="number" class="editform-edit em6width" id="ackva"
+               [(ngModel)]="DtoEdited.Ackva"
+               name="ackva">
+      </div>
+
+      <div class="editform-row">
+        <div class="editform-label">Inverter státusz</div>
+        <select type="text" class="editform-combo" name="inverterstatusz" [(ngModel)]="DtoEdited.Inverterallapot">
+          <option *ngFor="let s of projektservice.napeleminverterstatuszok" [value]="s">{{s}}</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="editform-card">
+      <div class="editform-row">
+        <div class="editform-label">Napelem</div>
+        <input type="text" class="editform-edit em15width" id="napelem"
+               maxlength="50" autocomplete="off"
+               [(ngModel)]="DtoEdited.Napelem"
+               name="napelem">
+      </div>
+
+      <div class="editform-row">
+        <div class="editform-label">DC, kW</div>
+        <input type="number" class="editform-edit em6width" id="dckw"
+               [(ngModel)]="DtoEdited.Dckw"
+               name="dckw">
+      </div>
+
+      <div class="editform-row">
+        <div class="editform-label">Napelem státusz</div>
+        <select type="text" class="editform-combo" name="napelemstatusz" [(ngModel)]="DtoEdited.Napelemallapot">
+          <option *ngFor="let s of projektservice.napeleminverterstatuszok" [value]="s">{{s}}</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="editform-row-bottom">
       <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
       <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
     </div>
