--- a/src/app/projekt/projekt-statusz/projekt-statusz.component.html
+++ b/src/app/projekt/projekt-statusz/projekt-statusz.component.html
@@ -9,7 +9,7 @@
       </select>
     </div>
 
-    <div class="editform-okcancel">
+    <div class="editform-row-bottom">
       <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
       <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
     </div>
