--- a/src/app/projektjegyzet/projekt-jegyzet-szerkesztes/projekt-jegyzet-szerkesztes.component.html
+++ b/src/app/projektjegyzet/projekt-jegyzet-szerkesztes/projekt-jegyzet-szerkesztes.component.html
@@ -6,12 +6,12 @@
 
     <div class="editform-row">
       <div class="editform-label">Leírás</div>
-      <input type="text" class="editform-edit em60width" id="leiras"
+      <input type="text" class="editform-edit megjegyzeswidth" id="leiras"
              autocomplete="off"
              [(ngModel)]="DtoEdited.Leiras" name="leiras">
     </div>
 
-    <div class="editform-okcancel">
+    <div class="editform-row-bottom">
       <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
       <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
