--- a/src/app/projektkapcsolat/projektkapcsolat-levalasztas/projektkapcsolat-levalasztas.component.html
+++ b/src/app/projektkapcsolat/projektkapcsolat-levalasztas/projektkapcsolat-levalasztas.component.html
@@ -3,7 +3,7 @@
   <div class="editform-row">
     Biztosan le akarja választani ezt a tételt a projektről?
   </div>
-  <div class="editform-okcancel">
+  <div class="editform-row-bottom">
     <button class="toolbutton okbutton" type="button" (click)="ok()">Ok</button>
     <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
   </div>
