--- a/src/app/projektkapcsolat/projektkapcsolat-vagolaprol/projektkapcsolat-vagolaprol.component.html
+++ b/src/app/projektkapcsolat/projektkapcsolat-vagolaprol/projektkapcsolat-vagolaprol.component.html
@@ -3,7 +3,7 @@
   <div class="editform-row">
     <app-vagolap></app-vagolap>
   </div>
-  <div class="editform-okcancel">
+  <div class="editform-row-bottom">
     <button class="toolbutton okbutton" type="button" (click)="ok()">Ok</button>
     <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
   </div>
