--- a/src/app/riport/bejovoszamla/bejovoszamla.component.html
+++ b/src/app/riport/bejovoszamla/bejovoszamla.component.html
@@ -14,7 +14,7 @@
                [(ngModel)]="ig" name="ig">
     </div>
 
-    <div class="editform-okcancel">
+    <div class="editform-row-bottom">
       <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
       <!--<button class="editform-cancelbutton" type="button" (click)="onCancel()">Stop</button>-->
     </div>
