--- a/src/app/riport/beszerzes/beszerzes.component.html
+++ b/src/app/riport/beszerzes/beszerzes.component.html
@@ -23,7 +23,7 @@
         </select>
     </div>
 
-    <div class="editform-okcancel">
+    <div class="editform-row-bottom">
       <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
       <!--<button class="editform-cancelbutton" type="button" (click)="onCancel()">Stop</button>-->
     </div>
