--- a/src/app/riport/koveteles/koveteles.component.html
+++ b/src/app/riport/koveteles/koveteles.component.html
@@ -9,7 +9,7 @@
                [(ngModel)]="datum" name="datum">
     </div>
 
-    <div class="editform-okcancel">
+    <div class="editform-row-bottom">
       <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
       <!--<button class="editform-cancelbutton" type="button" (click)="onCancel()">Stop</button>-->
     </div>
