--- a/src/app/riport/tartozas/tartozas.component.html
+++ b/src/app/riport/tartozas/tartozas.component.html
@@ -11,7 +11,7 @@
       </div>
     </div>
 
-    <div class="editform-okcancel">
+    <div class="editform-row-bottom">
       <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
       <!--<button class="editform-cancelbutton" type="button" (click)="onCancel()">Stop</button>-->
     </div>
