--- a/src/app/tools/tetel-torles/tetel-torles.component.html
+++ b/src/app/tools/tetel-torles/tetel-torles.component.html
@@ -1,7 +1,7 @@
 <div class="alapkeret">
   <h5>{{cim}} törlése</h5>
   <div class="editform-row">Biztosan törölni akarja ezt a tételt?</div>
-  <div class="editform-okcancel">
+  <div class="editform-row-bottom">
     <button class="toolbutton okbutton" (click)="doOk()">Ok</button>
     <button class="toolbutton" (click)="doCancel()">Mégsem</button>
   </div>
